horizontal scroll fix for safari

--- a/app/javascript/stylesheets/photography.sass
+++ b/app/javascript/stylesheets/photography.sass
@@ -2,12 +2,18 @@
 // layout
 // ------
 .photography-template
+  width: 100%
+  overflow-x: hidden
+  // position: relative
+  #main
+    overflow: hidden
   figure
     margin: 0
 
 .my-gallery
   // avoid small white space on right edge of gallery
   width: 100.5%
+  overflow-x: hidden
 
 // -------
 // Masonry
